--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "expo": "~52.0.27",
+    "expo-image-picker": "^16.0.4",
     "expo-location": "^18.0.5",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
     "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-stock-star-rating": "^1.0.6",
     "react-redux": "^9.2.0",
