--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-stock-star-rating": "^1.0.6",
     "react-redux": "^9.2.0",
