--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,29 +10,50 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.27",
+    "expo-constants": "^17.0.5",
     "expo-image-picker": "^16.0.4",
     "expo-location": "^18.0.5",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.2.0",
     "formik": "^2.4.6",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-maps": "^1.20.1",
-    "react-native-safe-area-context": "^5.1.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-chat": "^2.6.5",
+    "react-native-maps": "^1.18.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-stock-star-rating": "^1.0.6",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-maps",
+          "react-native-element-dropdown",
+          "react-native-stock-star-rating",
+          "yup"
+        ],
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
