--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-stock-star-rating": "^1.0.6",
+    "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "yup": "^1.6.1"
