--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-chat": "^2.6.5",
