--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.19.9",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/auth": "^21.7.1",
+    "@react-native-firebase/firestore": "^21.7.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -19,6 +23,7 @@
     "dotenv": "^16.4.7",
     "expo": "~52.0.28",
     "expo-constants": "^17.0.5",
+    "expo-dev-client": "~5.0.11",
     "expo-image-picker": "~16.0.5",
     "expo-location": "^18.0.5",
     "expo-status-bar": "~2.0.1",
@@ -30,8 +35,10 @@
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
     "react-native-maps": "^1.18.0",
+    "react-native-pager-view": "^6.7.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -39,8 +46,7 @@
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
-    "yup": "^1.6.1",
-    "expo-dev-client": "~5.0.11"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
