--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
     "react-native-maps": "^1.18.0",
+    "react-native-modals": "^0.22.3",
     "react-native-pager-view": "^6.7.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
