--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "expo-dev-client": "~5.0.11",
     "expo-image-picker": "~16.0.5",
     "expo-location": "^18.0.5",
+    "expo-notifications": "^0.29.14",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
     "formik": "^2.4.6",
