--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^2.5.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "expo-server-sdk": "^3.14.0",
     "express": "^4.21.1",
     "firebase-admin": "^13.0.0",
     "jsonwebtoken": "^9.0.2",
