--- a/deliveryRider/package.json
+++ b/deliveryRider/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.3",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
