--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,18 +22,18 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.28",
+    "expo": "~52.0.46",
     "expo-constants": "^17.0.5",
-    "expo-dev-client": "~5.0.11",
-    "expo-image-picker": "~16.0.5",
-    "expo-location": "^18.0.5",
+    "expo-dev-client": "~5.0.20",
+    "expo-image-picker": "~16.0.6",
+    "expo-location": "~18.0.10",
     "expo-notifications": "^0.29.14",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
     "formik": "^2.4.6",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
@@ -41,11 +41,13 @@
     "react-native-gifted-chat": "^2.6.5",
     "react-native-maps": "^1.18.0",
     "react-native-modals": "^0.22.3",
-    "react-native-pager-view": "^6.7.0",
+    "react-native-pager-view": "6.5.1",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-stock-star-rating": "^1.0.6",
+    "react-native-svg": "^15.11.2",
     "react-native-tab-view": "^4.0.5",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
