--- a/deliveryRider/package.json
+++ b/deliveryRider/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.9.0",
     "firebase": "^11.7.1",
     "react": "^19.1.0",
