--- a/deliveryRider/package.json
+++ b/deliveryRider/package.json
@@ -18,6 +18,7 @@
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.9.0",
     "firebase": "^11.7.1",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
