--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,6 @@ SECRET = HalalExpress
 CLOUDINARY_NAME=dwkmutbz3
 CLOUDINARY_API_KEY=574889734848917
 CLOUDINARY_API_SECRET=aCA2cBzc6mA8obK-twRlPo70jjk
+
+GMAIL_EMAIL="halalexpress960@gmail.com"
+GMAIL_PASSWORD="halalexpress"
