--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.8.1",
     "mongoose-autopopulate": "^1.1.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.7"
   }
 }
