--- a/backend/.env
+++ b/backend/.env
@@ -8,4 +8,4 @@ CLOUDINARY_API_KEY=574889734848917
 CLOUDINARY_API_SECRET=aCA2cBzc6mA8obK-twRlPo70jjk
 
 GMAIL_EMAIL="halalexpress960@gmail.com"
-GMAIL_PASSWORD="halalexpress"
+GMAIL_PASSWORD="fveh ynrx dkvz dzym"
