--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-native-gifted-chat": "^2.6.5",
     "react-native-maps": "^1.18.0",
     "react-native-modals": "^0.22.3",
+    "react-native-otp-entry": "^1.8.4",
     "react-native-pager-view": "6.5.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.16.7",
