--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
     "lottie-react": "^2.4.1",
