--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "firebase": "^11.8.1",
     "formik": "^2.4.6",
     "lottie-react": "^2.4.1",
     "qrcode.react": "^4.2.0",
