--- a/website/package.json
+++ b/website/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.8.1",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lottie-react": "^2.4.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
